Add nav content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     </head>
     <body>
         <header>
+            <nav>
+                <ul>
+                    <li><a href=index.html>Home</a></li>
+                    <li><a href=assets/html/contact.html>Contact</a></li>
+                    <li><a href=assets/html/about.html></a></li>
+                </ul>
+            </nav>
 
         </header>
 
