--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="license" content="">
         <meta name="robots" content="">
 
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 
         <title>Rock, Paper, Scissors</title>
 
@@ -20,11 +20,14 @@
             <nav>
                 <ul>
                     <li><a href=index.html>Home</a></li>
+                    <li><a href=assets/html/score.html>Score</a></li>
                     <li><a href=assets/html/contact.html>Contact</a></li>
                     <li><a href=assets/html/about.html></a></li>
                 </ul>
             </nav>
-
+            <h1>
+                Interstellar Rock, Paper, Scissors, Lizard, Spock Game
+            </h1>
         </header>
 
         <footer>
