--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <nav>
                 <ul>
                     <li><a href=index.html>Home</a></li>
-                    <li><a href=assets/html/score.html>Score</a></li>
+                    <li><a href=assets/html/score.html>Scores</a></li>
+                    <li><a href=assets/html/rules.html>Rules</a></li>
                     <li><a href=assets/html/contact.html>Contact</a></li>
-                    <li><a href=assets/html/about.html></a></li>
+                    <li><a href=assets/html/about.html>About</a></li>
                 </ul>
             </nav>
             <h1>
