Add JS functions structure

--- a/index.html
+++ b/index.html
@@ -16,25 +16,26 @@
 
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href=index.html>Home</a></li>
-                    <li><a href=assets/html/score.html>Scores</a></li>
-                    <li><a href=assets/html/rules.html>Rules</a></li>
-                    <li><a href=assets/html/contact.html>Contact</a></li>
-                    <li><a href=assets/html/about.html>About</a></li>
-                </ul>
-            </nav>
-            <h1>
-                Interstellar Rock, Paper, Scissors, Lizard, Spock Game
-            </h1>
-        </header>
+        <div class="wrapper">
+            <header>
+                <nav>
+                    <ul>
+                        <li><a href=index.html>Home</a></li>
+                        <li><a href=assets/html/score.html>Scores</a></li>
+                        <li><a href=assets/html/rules.html>Rules</a></li>
+                        <li><a href=assets/html/contact.html>Contact</a></li>
+                        <li><a href=assets/html/about.html>About</a></li>
+                    </ul>
+                </nav>
+                <h1>
+                    Interstellar Rock, Paper, Scissors, Lizard, Spock Game
+                </h1>
+            </header>
 
-        <footer>
+            <footer>
 
-        </footer>
-        
+            </footer>
+        </div>
         <script src="assets/js/script.js" async defer></script>
     </body>
 </html>
