Add description to logic.md

--- a/index.html
+++ b/index.html
@@ -8,34 +8,53 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Marc Picornell">
         <meta name="license" content="">
-        <meta name="robots" content="">
+        <meta name="robots" content="noindex">
+        <meta name="keyword" content="Rock, Paper, Scissors, Lizard, Spock">
 
         <link rel="stylesheet" href="assets/css/style.css">
 
-        <title>Rock, Paper, Scissors</title>
+        <title>RPSLS Ultimate</title>
 
     </head>
     <body>
-        <div class="wrapper">
-            <header>
-                <nav>
-                    <ul>
-                        <li><a href=index.html>Home</a></li>
-                        <li><a href=assets/html/score.html>Scores</a></li>
-                        <li><a href=assets/html/rules.html>Rules</a></li>
-                        <li><a href=assets/html/contact.html>Contact</a></li>
-                        <li><a href=assets/html/about.html>About</a></li>
-                    </ul>
-                </nav>
-                <h1>
-                    Interstellar Rock, Paper, Scissors, Lizard, Spock Game
-                </h1>
-            </header>
+        <header>
+            <h1 class="logo">
+                RPSLS Game
+            </h1>
+            <nav>
+                <ul class="menu">
+                    <li><a href=index.html>Play</a></li>
+                    <li><a href=assets/html/score.html>Scores</a></li>
+                    <li><a href=assets/html/rules.html>Rules</a></li>
+                    <!-- <li><a href=assets/html/contact.html>Contact</a></li>
+                    <li><a href=assets/html/about.html>About</a></li> -->
+                </ul>
+            </nav>
+        </header>
+        <main class="wrapper">
+            <section class="human-game">
+                <form>
+                    <fieldset>
+                        <legend>Human Name</legend>
+                    </fieldset>
+                </form>
+            </section>
+            <section class="game-choice">
 
-            <footer>
+            </section>
+            <section class="computer-game">
+                <form>
+                    <fieldset>
+                        <legend>Computer Name</legend>
+                    </fieldset>
+                </form>
+            </section>
+            <section class="score">
 
-            </footer>
-        </div>
+            </section>
+        </main>
+        <footer>
+        </footer>
         <script src="assets/js/script.js" async defer></script>
     </body>
 </html>
