--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     </head>
     <body>
         <header>
-            <h1 class="logo">
-                RPSLS Game
-            </h1>
-            <nav>
+            <nav class="nav">
                 <ul class="menu">
                     <li><a href=index.html>Play</a></li>
                     <li><a href=assets/html/score.html>Scores</a></li>
