Add mediaqueries and breakpoints

--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
                     <li><a href=index.html>Play</a></li>
                     <li><a href=assets/html/score.html>Scores</a></li>
                     <li><a href=assets/html/rules.html>Rules</a></li>
-                    <!-- <li><a href=assets/html/contact.html>Contact</a></li>
-                    <li><a href=assets/html/about.html>About</a></li> -->
                 </ul>
             </nav>
         </header>
-        <main class="wrapper">
-            <section class="human-game">
-                <form>
-                    <fieldset>
-                        <legend>Human Name</legend>
-                    </fieldset>
-                </form>
-            </section>
-            <section class="game-choice">
-
-            </section>
-            <section class="computer-game">
-                <form>
-                    <fieldset>
-                        <legend>Computer Name</legend>
-                    </fieldset>
-                </form>
-            </section>
-            <section class="score">
-
-            </section>
+        <main>
+            <div class="game-area">
+                <div class="human-game">
+                    <section>
+                        <p>This is the human game area</p>
+                    </section>
+                </div>
+                <div class="game-choice">
+                    <section>
+                        <p>This is the human choice for the game</p>
+                    </section>
+                </div>
+                <div class="computer-game">
+                    <section>
+                        <p>This is the computer game area</p>
+                    </section>
+                </div>
+                <div class="score">
+                    <section class="score">
+                        <p>This is the score area</p>
+                    </section>
+                </div>
+            </div>
         </main>
         <footer>
         </footer>
